# 37-somatic

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  Makefile  Makefile.am  README  README.md  configure.ac  control  daemon.c  ez.c  msg.c  msgply.cpp  proto_gen.sh  somatic_dump.c  somatic_motor.c  somatic_motor_cmd.cpp  somatic_motor_plot_argp.c  somatic_util.c  somaticrc
debian/: changelog  control  copyright  somatic-utils.install  somatic-utils.postinst  somatic-utils.postrm
etc/init.d/: somatic
exe/: sbeep.cpp  sjstel.c  sjstel.cpp  slogd.cpp  sns.c  sns.cpp  somatic_dump.c  somatic_dump.cpp  somatic_motor_cmd.cpp  somatic_motor_plot.cpp  somatic_motor_plot_argp.c
include/: somatic-pb.h  somatic.h  somatic.pb-c.h  somatic.pb.h
include/somatic/: daemon.h  ez.h  includes.h  lapack.h  motor.h  msg.h  somatic.h  util.h
include/somatic/msg/: base.h  hokuyo.h  joystick.h  motor.h  sdhdsa.h
lisp/: event.lisp  festival.lisp  slogd.lisp  sns.lisp  somatic.asd  somatic.d.lisp  somatic.lisp
msg/: base.c  joystick_msg.c  motor-msg.lisp  motor.c  sdhdsa.c
proto/: somatic.proto
scripts/: somatic
src/: .msg.c.swp  .somatic.pb-c.cpp.swp  daemon.c  daemon.cpp  motor.c  motor.cpp  msg.c  msg.cpp  msgply.cpp  sbeep.c  sjstel.c  slogd.c  sns.c  somatic.pb-c.cpp  somatic.pb.cpp  somatic_dump.c  somatic_exampled.c  somatic_live_plot.c  somatic_motor_plot.cpp  somatic_motor_plot_argp.c  somatic_util.c  somatic_util.cpp  util.cpp
src/proto/: somatic.pb-c.c  somatic.pb-c.h
trunk/: Makefile  msgply.cpp  somatic_util.c
trunk/include/somatic/: includes.h
trunk/include/somatic/msg/: hokuyo.h  motor.h
trunk/lisp/: sns.lisp  somatic.asd
trunk/msg/: base.c  hokuyo.c  sdhdsa.c
trunk/proto/: somatic.proto
trunk/python/: pycompile
trunk/verbatim/lib/pymodules/python2.6/: somatic_pb2.py
